// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @navikt/header Normal 1`] = `
<div
  style={
    Object {
      "maxWidth": "1920px",
      "width": "100%",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          @navikt/header
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          Normal
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <header
      className="header"
    >
      <div
        className="header__column"
      >
        <h1
          className="typo-sidetittel header__title"
        >
          NAV
          <span
            className="header__subtitle"
          >
            Svangerskap og Fødsel
          </span>
        </h1>
      </div>
      <div
        className="header__column"
      >
        <div>
          <div
            className="systems"
          >
            <button
              aria-expanded={false}
              aria-haspopup="dialog"
              className="knapp systems__button knapp--flat knapp--kompakt"
              disabled={false}
              onClick={[Function]}
              type="submit"
            >
              <svg
                focusable="false"
                height={32}
                kind="systemer"
                viewBox="0 0 128 128"
                width={32}
              >
                <path
                  d="M0 0h32v32H0zm48 0h32v32H48zm48 0h32v32H96zM0 48h32v32H0zm48 0h32v32H48zm48 0h32v32H96zM0 96h32v32H0zm48 0h32v32H48zm48 0h32v32H96z"
                />
              </svg>
              <span
                className="sr-only"
              >
                Systemer
              </span>
            </button>
          </div>
        </div>
        <div
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": "8px",
              "visibility": "hidden",
            }
          }
        >
          <div
            className="arrow"
            style={Object {}}
          />
        </div>
        <div>
          <div
            className="user"
          >
            <p
              className="typo-normal user__name"
            >
              Navn Brukersen
            </p>
          </div>
        </div>
        <div
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": "8px",
              "visibility": "hidden",
            }
          }
        >
          <div
            className="arrow"
            style={Object {}}
          />
        </div>
      </div>
    </header>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Story Source
      </h1>
      <div
        className="css-1fhpnuv"
      >
        <div
          className="css-1si67pu"
          data-simplebar={true}
        >
          <div
            className="simplebar-wrapper"
          >
            <div
              className="simplebar-height-auto-observer-wrapper"
            >
              <div
                className="simplebar-height-auto-observer"
              />
            </div>
            <div
              className="simplebar-mask"
            >
              <div
                className="simplebar-offset"
              >
                <div
                  className="simplebar-content-wrapper"
                >
                  <div
                    className="simplebar-content"
                  >
                    <pre
                      className="hljs css-4zr3vl"
                    >
                      <code
                        className="css-1maezg8"
                      >
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              className="token class-name"
                            >
                              Header
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            title
                          </span>
                          <span
                            className="token attr-value"
                          >
                            <span
                              className="token punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                            Svangerskap og Fødsel
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            userName
                          </span>
                          <span
                            className="token attr-value"
                          >
                            <span
                              className="token punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                            Navn Brukersen
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          

                          <span
                            className="token punctuation"
                          >
                            /&gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="simplebar-placeholder"
            />
          </div>
          <div
            className="simplebar-track simplebar-horizontal"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
          <div
            className="simplebar-track simplebar-vertical"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          className="css-11xgcgt"
        >
          <button
            className="css-1imo1gr"
            onClick={[Function]}
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Prop Types
      </h1>
      <div>
        <h3
          style={
            Object {
              "margin": "20px 0 0 0",
            }
          }
        >
          "
          Header
          " Component
        </h3>
        <small>
          No propTypes defined!
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots @navikt/header With Unit 1`] = `
<div
  style={
    Object {
      "maxWidth": "1920px",
      "width": "100%",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          @navikt/header
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          With Unit
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <header
      className="header"
    >
      <div
        className="header__column"
      >
        <h1
          className="typo-sidetittel header__title"
        >
          NAV
          <span
            className="header__subtitle"
          >
            Svangerskap og Fødsel
          </span>
        </h1>
      </div>
      <div
        className="header__column"
      >
        <div>
          <div
            className="systems"
          >
            <button
              aria-expanded={false}
              aria-haspopup="dialog"
              className="knapp systems__button knapp--flat knapp--kompakt"
              disabled={false}
              onClick={[Function]}
              type="submit"
            >
              <svg
                focusable="false"
                height={32}
                kind="systemer"
                viewBox="0 0 128 128"
                width={32}
              >
                <path
                  d="M0 0h32v32H0zm48 0h32v32H48zm48 0h32v32H96zM0 48h32v32H0zm48 0h32v32H48zm48 0h32v32H96zM0 96h32v32H0zm48 0h32v32H48zm48 0h32v32H96z"
                />
              </svg>
              <span
                className="sr-only"
              >
                Systemer
              </span>
            </button>
          </div>
        </div>
        <div
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": "8px",
              "visibility": "hidden",
            }
          }
        >
          <div
            className="arrow"
            style={Object {}}
          />
        </div>
        <div>
          <div
            className="user"
          >
            <p
              className="typo-normal user__name"
            >
              Navn Brukersen
            </p>
            <p
              className="typo-normal user__unit"
            >
              NFP Drammen
            </p>
          </div>
        </div>
        <div
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": "8px",
              "visibility": "hidden",
            }
          }
        >
          <div
            className="arrow"
            style={Object {}}
          />
        </div>
      </div>
    </header>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Story Source
      </h1>
      <div
        className="css-1fhpnuv"
      >
        <div
          className="css-1si67pu"
          data-simplebar={true}
        >
          <div
            className="simplebar-wrapper"
          >
            <div
              className="simplebar-height-auto-observer-wrapper"
            >
              <div
                className="simplebar-height-auto-observer"
              />
            </div>
            <div
              className="simplebar-mask"
            >
              <div
                className="simplebar-offset"
              >
                <div
                  className="simplebar-content-wrapper"
                >
                  <div
                    className="simplebar-content"
                  >
                    <pre
                      className="hljs css-4zr3vl"
                    >
                      <code
                        className="css-1maezg8"
                      >
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              className="token class-name"
                            >
                              Header
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            title
                          </span>
                          <span
                            className="token attr-value"
                          >
                            <span
                              className="token punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                            Svangerskap og Fødsel
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            userName
                          </span>
                          <span
                            className="token attr-value"
                          >
                            <span
                              className="token punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                            Navn Brukersen
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            userUnit
                          </span>
                          <span
                            className="token attr-value"
                          >
                            <span
                              className="token punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                            NFP Drammen
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          

                          <span
                            className="token punctuation"
                          >
                            /&gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="simplebar-placeholder"
            />
          </div>
          <div
            className="simplebar-track simplebar-horizontal"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
          <div
            className="simplebar-track simplebar-vertical"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          className="css-11xgcgt"
        >
          <button
            className="css-1imo1gr"
            onClick={[Function]}
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Prop Types
      </h1>
      <div>
        <h3
          style={
            Object {
              "margin": "20px 0 0 0",
            }
          }
        >
          "
          Header
          " Component
        </h3>
        <small>
          No propTypes defined!
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots @navikt/header With User Popover 1`] = `
<div
  style={
    Object {
      "maxWidth": "1920px",
      "width": "100%",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          @navikt/header
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          With User Popover
        </h2>
      </div>
    </div>
  </div>
  <div
    id="story-root"
    style={Object {}}
  >
    <header
      className="header"
    >
      <div
        className="header__column"
      >
        <h1
          className="typo-sidetittel header__title"
        >
          NAV
          <span
            className="header__subtitle"
          >
            Svangerskap og Fødsel
          </span>
        </h1>
      </div>
      <div
        className="header__column"
      >
        <div>
          <div
            className="systems"
          >
            <button
              aria-expanded={false}
              aria-haspopup="dialog"
              className="knapp systems__button knapp--flat knapp--kompakt"
              disabled={false}
              onClick={[Function]}
              type="submit"
            >
              <svg
                focusable="false"
                height={32}
                kind="systemer"
                viewBox="0 0 128 128"
                width={32}
              >
                <path
                  d="M0 0h32v32H0zm48 0h32v32H48zm48 0h32v32H96zM0 48h32v32H0zm48 0h32v32H48zm48 0h32v32H96zM0 96h32v32H0zm48 0h32v32H48zm48 0h32v32H96z"
                />
              </svg>
              <span
                className="sr-only"
              >
                Systemer
              </span>
            </button>
          </div>
        </div>
        <div
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": "8px",
              "visibility": "hidden",
            }
          }
        >
          <div
            className="arrow"
            style={Object {}}
          />
        </div>
        <div>
          <button
            aria-expanded={false}
            aria-haspopup="dialog"
            className="user"
            onClick={[Function]}
            type="button"
          >
            <span>
              <span
                className="typo-normal user__name"
              >
                Navn Brukersen
              </span>
              <span
                className="typo-normal user__unit"
              >
                NFP Drammen
              </span>
            </span>
            <i
              className="nav-frontend-chevron chevronboks user__chevron chevron--ned"
            />
          </button>
        </div>
        <div
          style={
            Object {
              "left": 0,
              "opacity": 0,
              "pointerEvents": "none",
              "position": "absolute",
              "top": "8px",
              "visibility": "hidden",
            }
          }
        >
          <div
            className="arrow"
            style={Object {}}
          />
          <div>
            Test
          </div>
        </div>
      </div>
    </header>
  </div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": "2px",
          "color": "black",
          "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "padding": "20px 40px 40px",
        }
      }
    >
      
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Story Source
      </h1>
      <div
        className="css-1fhpnuv"
      >
        <div
          className="css-1si67pu"
          data-simplebar={true}
        >
          <div
            className="simplebar-wrapper"
          >
            <div
              className="simplebar-height-auto-observer-wrapper"
            >
              <div
                className="simplebar-height-auto-observer"
              />
            </div>
            <div
              className="simplebar-mask"
            >
              <div
                className="simplebar-offset"
              >
                <div
                  className="simplebar-content-wrapper"
                >
                  <div
                    className="simplebar-content"
                  >
                    <pre
                      className="hljs css-4zr3vl"
                    >
                      <code
                        className="css-1maezg8"
                      >
                        <span
                          className="token tag"
                        >
                          <span
                            className="token tag"
                          >
                            <span
                              className="token punctuation"
                            >
                              &lt;
                            </span>
                            <span
                              className="token class-name"
                            >
                              Header
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            renderUserPopoverContent
                          </span>
                          <span
                            className="token script language-javascript"
                          >
                            <span
                              className="token script-punctuation punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token keyword"
                            >
                              function
                            </span>
                             
                            <span
                              className="token function"
                            >
                              noRefCheck
                            </span>
                            <span
                              className="token punctuation"
                            >
                              (
                            </span>
                            <span
                              className="token punctuation"
                            >
                              )
                            </span>
                             
                            <span
                              className="token punctuation"
                            >
                              {
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                            <span
                              className="token punctuation"
                            >
                              }
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            title
                          </span>
                          <span
                            className="token attr-value"
                          >
                            <span
                              className="token punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                            Svangerskap og Fødsel
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            userName
                          </span>
                          <span
                            className="token attr-value"
                          >
                            <span
                              className="token punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                            Navn Brukersen
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          
  
                          <span
                            className="token attr-name"
                          >
                            userUnit
                          </span>
                          <span
                            className="token attr-value"
                          >
                            <span
                              className="token punctuation"
                            >
                              =
                            </span>
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                            NFP Drammen
                            <span
                              className="token punctuation"
                            >
                              "
                            </span>
                          </span>
                          

                          <span
                            className="token punctuation"
                          >
                            /&gt;
                          </span>
                        </span>
                      </code>
                    </pre>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="simplebar-placeholder"
            />
          </div>
          <div
            className="simplebar-track simplebar-horizontal"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
          <div
            className="simplebar-track simplebar-vertical"
          >
            <div
              className="simplebar-scrollbar"
            />
          </div>
        </div>
        <div
          className="css-11xgcgt"
        >
          <button
            className="css-1imo1gr"
            onClick={[Function]}
          >
            Copy
          </button>
        </div>
      </div>
      <h1
        style={
          Object {
            "borderBottom": "1px solid #EEE",
            "fontSize": "25px",
            "margin": "20px 0 0 0",
            "padding": "0 0 5px 0",
          }
        }
      >
        Prop Types
      </h1>
      <div>
        <h3
          style={
            Object {
              "margin": "20px 0 0 0",
            }
          }
        >
          "
          Header
          " Component
        </h3>
        <small>
          No propTypes defined!
        </small>
      </div>
    </div>
  </div>
</div>
`;
